# Rust-Rocket-Test

./: Cargo.toml
src/: main.rs
templates/: index.hbs
