[package]
name = "Rust-Rocket-Test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "=0.5.0-rc.3"
rocket_dyn_templates = "0.1.0-rc.1"
# rocket-include-handlebars = "0.13.4"
# tera = "1.18.1"
# rocket-include-tera = "0.5.4"
